# torc-lang

./: .gitignore  Cargo.toml  EVALUATION.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md
.github/workflows/: ci.yml
cli/torc/: Cargo.toml
cli/torc/src/: main.rs  manifest.rs
cli/torc/src/commands/: build.rs  clean.rs  decision.rs  doctor.rs  ffi.rs  init.rs  inspect.rs  mod.rs  registry.rs  target.rs  verify.rs
crates/torc-core/: Cargo.toml
crates/torc-core/src/: builder.rs  contract.rs  hash.rs  lib.rs  provenance.rs  types.rs
crates/torc-core/src/contract/: generate.rs  mod.rs
crates/torc-core/src/graph/: constraints.rs  edge.rs  mod.rs  node.rs  port.rs  region.rs
crates/torc-core/src/types/: check.rs  mod.rs
crates/torc-ffi/: Cargo.toml
crates/torc-ffi/src/: bridge_from_c.rs  bridge_to_c.rs  csig.rs  declaration.rs  error.rs  lib.rs  marshal.rs  policy.rs  trust.rs
crates/torc-materialize/: Cargo.toml
crates/torc-materialize/src/: canonicalize.rs  error.rs  gate.rs  layout.rs  lib.rs  pipeline.rs  postverify.rs  report.rs  resource.rs  schedule.rs  transform.rs
crates/torc-materialize/src/codegen/: context.rs  emit.rs  lower.rs  mod.rs  profile.rs  types.rs
crates/torc-observe/: Cargo.toml
crates/torc-observe/src/: contract_table.rs  dataflow.rs  decision_view.rs  error.rs  format.rs  lib.rs  provenance.rs  pseudo_code.rs  resource_budget.rs  view.rs
crates/torc-registry/: Cargo.toml
crates/torc-registry/src/: audit.rs  cache.rs  client.rs  error.rs  integrity.rs  lib.rs  module_manifest.rs  publish.rs  resolution.rs  tree.rs  version.rs
crates/torc-spec/: Cargo.toml
crates/torc-spec/src/: assumption.rs  bridge.rs  conflict.rs  decision.rs  error.rs  graph.rs  history.rs  impact.rs  lib.rs  serialize.rs
crates/torc-targets/: Cargo.toml
crates/torc-targets/src/: environment.rs  error.rs  isa.rs  lib.rs  microarch.rs  parse.rs  platform.rs
crates/torc-trc/: Cargo.toml
crates/torc-trc/src/: format.rs  lib.rs  merge.rs
crates/torc-verify/: Cargo.toml
crates/torc-verify/src/: cache.rs  engine.rs  interval.rs  lib.rs  profile.rs  registry.rs  report.rs  smt.rs  structural.rs  witness.rs
examples/checksum/: Cargo.toml
examples/checksum/src/: lib.rs  main.rs
examples/checksum/tests/: integration.rs
examples/e2e-arithmetic/: Cargo.toml
examples/e2e-arithmetic/src/: lib.rs  main.rs
examples/e2e-arithmetic/tests/: integration.rs
examples/foc-controller/: Cargo.toml
examples/foc-controller/src/: lib.rs  main.rs
examples/foc-controller/tests/: integration.rs
examples/pid-controller/: Cargo.toml
examples/pid-controller/src/: lib.rs  main.rs
examples/pid-controller/tests/: integration.rs
spec/: 00-index.md  01-executive-summary.md  02-design-philosophy.md  03-language-specification.md  04-type-system.md  05-ecosystem.md  06-materialization-engine.md  07-target-platforms.md  08-registry.md  09-observability.md  10-verification.md  11-interoperability.md  12-example-application.md  13-specification-interface.md  14-probabilistic-specification-engine.md  15-specification-workspace.md
