[package]
name = "torc"
description = "Unified CLI tool for the Torc programming language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
torc-core = { workspace = true }
torc-trc = { workspace = true }
torc-verify = { workspace = true }
torc-materialize = { workspace = true }
torc-targets = { workspace = true }
torc-ffi = { workspace = true }
torc-observe = { workspace = true }
torc-registry = { workspace = true }
anyhow = { workspace = true }
