[package]
name = "torc-ffi"
description = "Foreign function interface bridge generation for the Torc language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
torc-core = { workspace = true }
torc-targets = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
