[package]
name = "torc-materialize"
description = "Materialization engine (graph-to-executable pipeline) for the Torc language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
torc-core = { workspace = true }
torc-verify = { workspace = true }
torc-targets = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
inkwell = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
llvm = ["dep:inkwell", "dep:tempfile"]
