[package]
name = "torc-observe"
description = "Human observability layer and projection views for the Torc language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
torc-core = { workspace = true }
torc-materialize = { workspace = true }
torc-spec = { workspace = true }
torc-targets = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
