[package]
name = "torc-registry"
description = "Package registry client for the Torc language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
torc-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
