[package]
name = "torc-spec"
description = "Decision State Model for the Torc specification interface"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
torc-core = { workspace = true }
torc-verify = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
