[package]
name = "torc-targets"
description = "Target platform model definitions and parsing for the Torc language"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"

[dev-dependencies]
tempfile = { workspace = true }
