[package]
name = "torc-verify"
description = "Verification framework and SMT solver integration for the Torc language"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
z3 = ["dep:z3"]

[dependencies]
torc-core = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
z3 = { workspace = true, optional = true }
