[package]
name = "checksum"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "checksum"
path = "src/lib.rs"

[[bin]]
name = "checksum"
path = "src/main.rs"

[dependencies]
torc-core = { workspace = true }
torc-trc = { workspace = true }

[dev-dependencies]
torc-verify = { workspace = true }
torc-observe = { workspace = true }
torc-targets = { workspace = true }
torc-materialize = { workspace = true }
