[package]
name = "pid-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "pid_controller"
path = "src/lib.rs"

[[bin]]
name = "pid-controller"
path = "src/main.rs"

[dependencies]
torc-core = { workspace = true }
torc-trc = { workspace = true }

[dev-dependencies]
torc-verify = { workspace = true }
torc-observe = { workspace = true }
torc-targets = { workspace = true }
torc-materialize = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
llvm = ["torc-materialize/llvm"]
